# goodscoop

./: .env.example  CLAUDE.md  main.py  pyproject.toml  requirements.txt
app/fetchers/: __init__.py  base.py  calendar.py  chronicle_live.py  google_news.py  newcastle_uni.py  nhs_newcastle.py  on_this_day.py  tech_news.py  weather.py
app/models/: news.py
app/services/: notifications.py
app/services/agents/: agent.py  ollama_agent.py
config/: __init__.py  app.py  services.py
